The GET API is made with the filter and pagination and the Swagger is also configure
