# src/routes/taskRoutes.ts
@@ -1,10 +1,11 @@
 import { Router } from 'express';
-import { createTask} from '../controllers/taskController';
+import { createTask, getTasks, getTaskById } from '../controllers/taskController';
 import { validateTask } from '../middleware/validation';
 
 const router = Router();
 
 router.post('/tasksInput', validateTask, createTask);
-
+router.get('/tasksGetByFilter', getTasks);
+router.get('/tasksGetByID/:id', getTaskById);
 
 export default router;
